[package]
name = "serde_json_struct_key"
version = "1.0.0"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/tzcnt/serde_json_struct_key/"
description = "Serialize a HashMap<K,V>, Vec<K,V>, Iter<(&K,&V)>, or Iter<&(K,V)> into a JSON map with serde_json, even if K is a struct type."
keywords = ["serde_json", "hashmap", "iterator", "struct", "key"]
categories = ["encoding"]
exclude = ["main.rs", ".vscode/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1",features=["derive"]}
serde_json = "1"
